--- a/package.json
+++ b/package.json
@@ -15,10 +15,21 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.0.1",
+    "canvas": "^2.8.0",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.6.0",
     "react": "^17.0.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-pdf": "^5.3.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
+    "react-vertical-timeline-component": "^3.3.3"
   }
 }
