--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material/top-app-bar": "^11.0.0",
+    "@rmwc/top-app-bar": "^6.1.4",
     "bootstrap": "^5.0.1",
     "canvas": "^2.8.0",
     "gatsby": "^3.4.1",
